# synaptic-vesicle-detection

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
examples/: default_config.yaml  example_usage.py  run_detection.sh
prompts/: agents.md
sv_detection/: __init__.py  cli.py  config.py  detector.py  features.py  peak_detection.py  preprocessing.py  qc.py  utils.py
tests/: conftest.py  test_config.py  test_integration.py
